[project]
name = "claude-changelog-telegram-bot"
version = "0.1.0"
description = "Telegram bot that posts Claude Code changelog updates to a channel"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "python-telegram-bot>=21,<22",
  "httpx>=0.27,<0.28",
  "python-dotenv>=1.1.1",
]

[project.scripts]
claude-changelog-bot = "bot.main:main"

[tool.uv]
dev-dependencies = []
